--- a/templates/funcionamento.html
+++ b/templates/funcionamento.html
@@ -21,21 +21,21 @@
 <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 7%;">Documentos para Matrícula em todos os níveis</p>
 
 <ol class="list-group list-group-light " style="margin-left: 7%;">
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Comprovante de tipagem sanguínea;</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)" >> Cópia da Certidão de Nascimento do aluno e, se possuir, da Carteira de Identidade e do CPF;</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia do cartão de vacina (para crianças até 08 anos);</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia do Título de Eleitor, se maior de 16 anos;</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia da Carteira de Identidade e CPF dos Responsáveis;</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia do comprovante de residência: água, energia, IPTU,...</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> 02 fotos 3X4 (recentes);</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Atestado médico autorizando a participação nas atividades físicas - Natação e Futsal;</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Histórico Escolar ou DEPROV - Declaração Provisória de Matrícula -, para  matrículas a partir do 2º ano EF ;</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> No ato da matrícula, haverá consulta no SPC/Serasa;</li>
-    <li class="list-group-item item border-0 font-monospace" style="font-size: small; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Em caso de débito, a matrícula não será efetivada.</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Comprovante de tipagem sanguínea;</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)" >> Cópia da Certidão de Nascimento do aluno e, se possuir, da Carteira de Identidade e do CPF;</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia do cartão de vacina (para crianças até 08 anos);</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia do Título de Eleitor, se maior de 16 anos;</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia da Carteira de Identidade e CPF dos Responsáveis;</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Cópia do comprovante de residência: água, energia, IPTU,...</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> 02 fotos 3X4 (recentes);</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Atestado médico autorizando a participação nas atividades físicas - Natação e Futsal;</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Histórico Escolar ou DEPROV - Declaração Provisória de Matrícula -, para  matrículas a partir do 2º ano EF ;</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> No ato da matrícula, haverá consulta no SPC/Serasa;</li>
+    <li class="list-group-item item border-0" style="font-size: 17px; padding-top: 0; padding-bottom: 0; background-color:rgba(144,  203,  44,  0)">> Em caso de débito, a matrícula não será efetivada.</li>
 </ol>
 
-<p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Educação Infantil</p>
-<p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0;">Valores das Mensalidades para 2023</p>
+<p class="fs-6 fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 2%; margin-bottom: 0;">Educação Infantil</p>
+<p class="fw-bold" style="margin-left: 7%; font-size: 17px; margin-top: 0;">Valores das Mensalidades para 2023</p>
 
 <table class="table table-sm table-hover table-bordered" style="max-width: 70%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
@@ -74,7 +74,7 @@
     </tbody>
   </table>
 
-  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
 
 <table class="table table-sm table-hover table-bordered" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
@@ -103,7 +103,7 @@
     </tbody>
   </table>
 
-  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="https://www.proseculo.com.br/" target="_blank">www.proseculo.com.br.</a></p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="https://www.proseculo.com.br/" target="_blank">www.proseculo.com.br.</a></p>
 
 <table class="table table-sm table-hover table-bordered" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
@@ -139,7 +139,7 @@
 <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
 
 <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Ensino Fundamental I e II</p>
-<p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
+<p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
 
 <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 70%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
@@ -190,7 +190,7 @@
     </tbody>
   </table>
 
-  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
 
   <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
       <thead>
@@ -219,8 +219,8 @@
       </tbody>
     </table>
 
-    <p class="fw-bold" style="margin-left: 7%; font-size: 13px; margin-top: 0; margin-bottom: 0;">Os livros do 1º ao 8º ano são vendidos pela Editora Positivo na loja virtual:</a></p>
-    <p class="fw-bold" style="margin-left: 7%; font-size:12px; margin-bottom:0;">*Livro vendido na Secretaria de Atendimento do CCI. </p>
+    <p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Os livros do 1º ao 8º ano são vendidos pela Editora Positivo na loja virtual:</a></p>
+    <p class="fw-bold" style="margin-left: 7%; font-size:20px; margin-bottom:0;">*Livro vendido na Secretaria de Atendimento do CCI. </p>
 
     <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
         <thead>
@@ -265,10 +265,10 @@
         </tbody>
       </table>
 
-      <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
+      <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0; font-size: 20px;">Faça a pré-matrícula do seu filho,</p>
 
-      <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">9º ano Pré-Médio e Ensino Médio</p>
-      <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
+      <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0; font-size: 20px;">9º ano Pré-Médio e Ensino Médio</p>
+      <p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
 
       <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 70%; margin-left: 7%; margin-bottom: 50px;">
         <thead>
@@ -295,7 +295,7 @@
         </tbody>
       </table>
 
-      <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
+      <p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Valores dos Livros para 2023</p>
 
       <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
           <thead>
@@ -320,9 +320,9 @@
           </tbody>
         </table>
 
-        <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="https://www.proseculo.com.br/ " target="_blank">www.proseculo.com.br.</a></p>
+        <p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="https://www.proseculo.com.br/ " target="_blank">www.proseculo.com.br.</a></p>
 
-<table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
+<table class="table table-sm table-hover table-bordered" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
       <tr>
         <th scope="col" style="text-align: center; padding: 0;">Lista de Materiais</th>
@@ -343,12 +343,12 @@
   </table>
 
 
-  <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 1%; margin-bottom: 0;">Faça a pré-matrícula do seu filho,</p>
+  <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 1%; margin-bottom: 0; font-size: 17px;">Faça a pré-matrícula do seu filho,</p>
 
-  <p class="fs-7 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0;">Faculdade</p>
-  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
+  <p class="fs-7 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 0; font-size: 20px;">Faculdade</p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 20px; margin-top: 0; margin-bottom: 0;">Valores das Mensalidades para 2023</p>
 
-  <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 40%; margin-left: 7%; margin-bottom: 50px;">
+  <table class="table table-sm table-hover table-bordered" style="max-width: 40%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
       <tr>
         <th scope="col" style="text-align: center; max-width: 50px; ">Cursos</th>
