--- a/templates/institucional.html
+++ b/templates/institucional.html
@@ -21,7 +21,7 @@
 <div class="d-flex aling-items-center">
 
 
-    <p class="font-monospace" style="text-align: justify; font-size: 17px; font-style: italic; margin-left: 7%; margin-right: 7%;">
+    <p class="" style="text-align: justify; font-size: 17px; margin-left: 7%; margin-right: 7%;">
 
 
         O CCI foi fundado em 1996 com a implantação gradativa da Educação Infantil e do Ensino Fundamental, pela Sociedade Educativa Braga e Elói Ltda. A iniciativa partiu de um grupo de educadores decididos a promover educação de qualidade e a formar agentes da PAZ e do BEM, por meio de um trabalho voltado para o aperfeiçoamento sociocultural, humano e solidário em ambiente prazeroso.
